--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -2218,7 +2218,8 @@
   .info-item .notice-icon,
   .live-record-card-cntr .cover .corner.new,
   .block-list-item-label,
-  .multi-page .cur-list .list-box li .pay-label {
+  .multi-page .cur-list .list-box li .pay-label,
+  .manga-detail .section .section-list .batch-buy {
     border: 0 !important;
     background-color: var(--c-accent) !important;
     color: var(--c-white) !important;
@@ -2295,7 +2296,8 @@
   .info-item .notice-icon:hover,
   .live-record-card-cntr .cover .corner.new:hover,
   .block-list-item-label:hover,
-  .multi-page .cur-list .list-box li .pay-label:hover {
+  .multi-page .cur-list .list-box li .pay-label:hover,
+  .manga-detail .section .section-list .batch-buy:hover {
     color: var(--c-white) !important;
   }
   .gg-icon,
@@ -2313,8 +2315,7 @@
   .user-level-icon,
   .history-card .up-info .room-status>span,
   .achievement-card-centent>.header>.state-normal,
-  .tab-selector-wrap .tag-wrap .tag span,
-  .category {
+  .tab-selector-wrap .tag-wrap .tag span {
     border-color: var(--c-border) !important;
     background-color: var(--c-background) !important;
     color: var(--c-text) !important;
@@ -2322,8 +2323,7 @@
   .tag:hover,
   .tag-list li.tag-item:hover,
   .tag-area .tag:hover,
-  .link-tag:hover,
-  .category:hover {
+  .link-tag:hover {
     background-color: var(--c-hover) !important;
   }
   .primary-menu .nav-menu .channel.on:after,
@@ -7392,7 +7392,8 @@
   .side-bar .list {
     margin-top: 100px !important;
   }
-  .side-bar .item a:hover {
+  .side-bar .item a:hover,
+  .list-item .name {
     color: var(--c-title) !important;
   }
   .list-item .last-word,
@@ -7402,7 +7403,8 @@
   .list .item.active a {
     color: var(--c-accent) !important;
   }
-  .card {
+  .card,
+  .bili-im {
     margin-bottom: 0 !important;
     box-shadow: none !important;
     background-color: var(--c-background) !important;
@@ -7413,7 +7415,8 @@
   .list-title,
   .title,
   .divider,
-  .orginal-reply {
+  .orginal-reply,
+  .bili-im .left {
     border-color: var(--c-border) !important;
   }
   .action-menu .menu-list:before {
@@ -7744,7 +7747,8 @@
   .manga-logo,
   .user-info-panel a .tooltip,
   .nav-list a:last-child,
-  .download-app {
+  .download-app,
+  .manga-navbar .wrapper .spacer .row:nth-child(n + 2) {
     display: none !important;
   }
   .manga-navbar .manga-navbar,
@@ -7758,6 +7762,9 @@
   .drop-list .more-btn-container:hover,
   .user-panel .drop-list .logout-btn-container .logout-button:hover {
     background-color: var(--c-hover) !important;
+  }
+  .nav-list .nav-item .item-underline {
+    background-color: var(--c-accent) !important;
   }
   nav.manga-navbar .right-part .drop-list .size-ruler a button {
     color: var(--c-title) !important;
@@ -7799,11 +7806,17 @@
   .search-bar .placeholder-list {
     height: 32px !important;
   }
+  .manga-navbar .wrapper .spacer {
+    height: 100% !important;
+  }
   .search-bar .placeholder-list .placeholder-item {
     line-height: 32px !important;
   }
   .search-bar .confirm-btn {
     padding: 8px !important;
+  }
+  .manga-navbar .hide-mode {
+    transform: translateY(0) !important;
   }
   .search-bar .search-suggestion {
     margin-top: 8px;
@@ -7868,7 +7881,8 @@
   }
   .multi-line-text::before,
   .multi-line-text::after,
-  .rank-list {
+  .rank-list,
+  .section-navigator .divider {
     display: none !important;
   }
   .newbie-awarder .award-dialog .award-dialog-container,
@@ -7877,15 +7891,20 @@
   .overlay .guide-attention .welfare-box {
     background-color: var(--c-background) !important;
   }
-  .vertical-block-card {
+  .vertical-block-card,
+  .tags.recommend {
     background-color: transparent !important;
+  }
+  .header .tab.active:after {
+    background-color: var(--c-accent) !important;
   }
   .section-title,
   .item-title,
   .manga-title,
   .standby-panel .content-container .panel-title,
   .style-section .tag-block .block-title,
-  .overlay .guide-attention .welfare-box .welfare-title {
+  .overlay .guide-attention .welfare-box .welfare-title,
+  .header .tab {
     color: var(--c-title) !important;
   }
   .manga-card-vertical .text-info-section .supporting-text,
@@ -7896,14 +7915,20 @@
   .overlay .guide-attention .welfare-box .welfare-info {
     color: var(--c-text) !important;
   }
+  .title .button div {
+    color: var(--c-white) !important;
+  }
   .size-ruler .style-section .tag-block .tag-containers .style-tag.selected,
-  .size-ruler .style-section .tag-block .tag-containers .style-tag:hover {
+  .size-ruler .style-section .tag-block .tag-containers .style-tag:hover,
+  .header .tab.active,
+  .header .tab:hover {
     color: var(--c-accent) !important;
   }
   .section-navigator {
     border-color: var(--c-border) !important;
   }
-  .recommendation-section {
+  .recommendation-section,
+  .app-layout .size-ruler .fix-scroller {
     margin: 0 !important;
   }
   .section-navigator .section-item {
@@ -7934,7 +7959,8 @@
   .drop-list .more-btn-container .more-button,
   .index-banner .control-button,
   .index-banner .control-button .app-button,
-  .newbie-awarder .floating-button .widget-close-button {
+  .newbie-awarder .floating-button .widget-close-button,
+  .section-navigator .back-to-top {
     border: 0;
     background-color: transparent !important;
     color: var(--c-title) !important;
@@ -7951,16 +7977,21 @@
   .drop-list .more-btn-container .more-button::after,
   .index-banner .control-button::after,
   .index-banner .control-button .app-button::after,
-  .newbie-awarder .floating-button .widget-close-button::after {
+  .newbie-awarder .floating-button .widget-close-button::after,
+  .section-navigator .back-to-top::after {
     content: none !important;
   }
   .recommendation-section .manga-list {
     width: 100% !important;
   }
-  .title-tooltip {
+  .title-tooltip,
+  .manga-detail .section .right-side,
+  .header-info .manga-info .supporting-text .label-icon,
+  .container .pocket-tv {
     display: none !important;
   }
-  .purchase-panel {
+  .purchase-panel,
+  .container .back-to-content {
     background-color: var(--c-background) !important;
   }
   .list-data .list-item.last-read,
@@ -7969,7 +8000,11 @@
   .purchase-panel .action-buttons button.action-button.selected {
     background-color: var(--c-hover) !important;
   }
-  .header-info .manga-info .season-introduction .size-ruler {
+  .container .back-to-content .line {
+    background-color: var(--c-border) !important;
+  }
+  .header-info .manga-info .season-introduction .size-ruler,
+  .manga-detail .layout {
     background-color: transparent !important;
   }
   .list-item .short-title,
@@ -7994,6 +8029,20 @@
   .list-data .list-item.last-read,
   .list-data .list-item:hover {
     border-color: var(--c-accent) !important;
+  }
+  .manga-detail .layout,
+  .manga-detail .section .section-list,
+  .container .back-to-content {
+    box-shadow: none !important;
+  }
+  .episode-list .list-data .list-item:nth-child(4n) {
+    margin-right: 16px;
+  }
+  .episode-list .list-data .list-item:nth-child(5n) {
+    margin-right: 0;
+  }
+  .manga-detail .section .section-list {
+    width: 100% !important;
   }
   .purchase-panel .action-buttons .action-button .tag.discount {
     border-radius: 0 0 6px 0;
