--- a/bilibili-lite/src/manga/detail.styl
+++ b/bilibili-lite/src/manga/detail.styl
@@ -1,8 +1,12 @@
 /* 漫画详情页 */
 .title-tooltip
+.manga-detail .section .right-side
+.header-info .manga-info .supporting-text .label-icon
+.container .pocket-tv
   display none !important
 
 .purchase-panel
+.container .back-to-content
   background-color: var(--c-background) !important
 
 .list-data .list-item.last-read
@@ -11,7 +15,11 @@
 .purchase-panel .action-buttons button.action-button.selected
   background-color var(--c-hover) !important
 
+.container .back-to-content .line
+  background-color var(--c-border) !important
+
 .header-info .manga-info .season-introduction .size-ruler
+.manga-detail .layout
   background-color transparent !important
 
 .list-item .short-title
@@ -36,6 +44,20 @@
 .list-data .list-item.last-read
 .list-data .list-item:hover
   border-color var(--c-accent) !important
+
+.manga-detail .layout
+.manga-detail .section .section-list
+.container .back-to-content
+  box-shadow: none !important
+
+.episode-list .list-data .list-item:nth-child(4n)
+  margin-right: 16px
+
+.episode-list .list-data .list-item:nth-child(5n)
+  margin-right: 0
+
+.manga-detail .section .section-list
+  width: 100% !important
 
 .purchase-panel .action-buttons .action-button .tag.discount
   border-radius: 0 0 6px 0
