--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -2,6 +2,7 @@
 .multi-line-text::before
 .multi-line-text::after
 .rank-list
+.section-navigator .divider
   display none !important
 
 .newbie-awarder .award-dialog .award-dialog-container
@@ -11,7 +12,11 @@
   background-color var(--c-background) !important
 
 .vertical-block-card
+.tags.recommend
   background-color transparent !important
+
+.header .tab.active:after
+  background-color var(--c-accent) !important
 
 .section-title
 .item-title
@@ -19,6 +24,7 @@
 .standby-panel .content-container .panel-title
 .style-section .tag-block .block-title
 .overlay .guide-attention .welfare-box .welfare-title
+.header .tab
   color var(--c-title) !important
 
 .manga-card-vertical .text-info-section .supporting-text
@@ -29,14 +35,20 @@
 .overlay .guide-attention .welfare-box .welfare-info
   color var(--c-text) !important
 
+.title .button div
+  color var(--c-white) !important
+
 .size-ruler .style-section .tag-block .tag-containers .style-tag.selected
 .size-ruler .style-section .tag-block .tag-containers .style-tag:hover
+.header .tab.active
+.header .tab:hover
   color var(--c-accent) !important
 
 .section-navigator
   border-color var(--c-border) !important
 
 .recommendation-section
+.app-layout .size-ruler .fix-scroller
   margin 0 !important
 
 .section-navigator .section-item
@@ -68,6 +80,7 @@
 .index-banner .control-button
 .index-banner .control-button .app-button
 .newbie-awarder .floating-button .widget-close-button
+.section-navigator .back-to-top
   border 0
   background-color transparent !important
   color var(--c-title) !important
