--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -72,6 +72,7 @@ em:not(.icon)
 .live-record-card-cntr .cover .corner.new
 .block-list-item-label
 .multi-page .cur-list .list-box li .pay-label
+.manga-detail .section .section-list .batch-buy
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -95,7 +96,6 @@ em:not(.icon)
 .history-card .up-info .room-status>span
 .achievement-card-centent>.header>.state-normal
 .tab-selector-wrap .tag-wrap .tag span
-.category
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -104,7 +104,6 @@ em:not(.icon)
 .tag-list li.tag-item:hover
 .tag-area .tag:hover
 .link-tag:hover
-.category:hover
   background-color var(--c-hover) !important
 
 .primary-menu .nav-menu .channel.on:after
