fix: danmu styles

--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.2.12
+@version        1.2.13
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-lite
@@ -3006,7 +3006,8 @@
   }
   .comment,
   .bb-comment .nameplate .nameplate-card .nameplate-text,
-  .comment-bilibili-fold .nameplate .nameplate-card .nameplate-text {
+  .comment-bilibili-fold .nameplate .nameplate-card .nameplate-text,
+  .main-container .plp-l .comment-wrapper {
     border: 0 !important;
   }
   .bb-comment .comment-list .list-item .con .vote-container:hover .text-area,
@@ -4761,11 +4762,19 @@
   .bilibili-player-video-wrap li,
   .bilibili-player-video-wrap span,
   .bilibili-player-video-wrap span:hover,
+  .bilibili-player-video-wrap .bilibili-player-video-top,
+  .bilibili-player-video-wrap .bilibili-player-video-state,
+  .bilibili-player-video-wrap .bilibili-player-video-panel,
+  .bilibili-player-video-wrap .bilibili-player-video-popup,
+  .bilibili-player-video-wrap .bilibili-player-video-subtitle,
+  .bilibili-player-video-wrap .bilibili-player-video,
+  .bilibili-player-video-wrap .bilibili-player-video-control-wrap,
+  .bilibili-player-video-wrap .bilibili-player-video-toast-wrp,
+  .bilibili-player-video-wrap .bilibili-player-volumeHint,
   .player-tooltips div,
   .bilibili-player-context-menu-container.black ul>li a,
   .bilibili-player-context-menu-container.black ul>li a span,
   .bilibili-player-video-control-bottom-center .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-danmaku-input,
-  .bilibili-player-video-wrap div:not(.bilibili-danmaku),
   .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active,
   .bilibili-player .bilibili-player-area .bilibili-player-video-control .bilibili-player-video-btn .bilibili-player-video-quality-menu .bilibili-player-bigvip,
   .bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row .row-selection .selection-span.active[data-type='fontsize'] .selection-name,
