--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -105,6 +105,7 @@
 .comment
 .bb-comment .nameplate .nameplate-card .nameplate-text
 .comment-bilibili-fold .nameplate .nameplate-card .nameplate-text
+.main-container .plp-l .comment-wrapper
 	border 0 !important
 
 .bb-comment .comment-list .list-item .con .vote-container:hover .text-area
