--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -113,11 +113,19 @@ ul.star-wrapper li i
 .bilibili-player-video-wrap li
 .bilibili-player-video-wrap span
 .bilibili-player-video-wrap span:hover
+.bilibili-player-video-wrap .bilibili-player-video-top
+.bilibili-player-video-wrap .bilibili-player-video-state
+.bilibili-player-video-wrap .bilibili-player-video-panel
+.bilibili-player-video-wrap .bilibili-player-video-popup
+.bilibili-player-video-wrap .bilibili-player-video-subtitle
+.bilibili-player-video-wrap .bilibili-player-video
+.bilibili-player-video-wrap .bilibili-player-video-control-wrap
+.bilibili-player-video-wrap .bilibili-player-video-toast-wrp
+.bilibili-player-video-wrap .bilibili-player-volumeHint
 .player-tooltips div
 .bilibili-player-context-menu-container.black ul>li a
 .bilibili-player-context-menu-container.black ul>li a span
 .bilibili-player-video-control-bottom-center .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-danmaku-input
-.bilibili-player-video-wrap div:not(.bilibili-danmaku)
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active
 .bilibili-player .bilibili-player-area .bilibili-player-video-control .bilibili-player-video-btn .bilibili-player-video-quality-menu .bilibili-player-bigvip
 .bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row .row-selection .selection-span.active[data-type='fontsize'] .selection-name
