--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -136,6 +136,9 @@
 .month-selector .month-info .month-list .month-item:hover
 .buy-detail .master
 .btn-box .total-price .price
+.gift-panel-box .gift-reveal-header .gift-tab.active .name
+.end-part .award-title
+.end-part .winner-box .winner-list .winner-item span
 	color var(--c-accent) !important
 
 .room-introduction-tags
@@ -145,12 +148,15 @@
 .edit-button
 .bili-share-pc
 .result-anchor-box
+.gift-panel-box .gift-reveal-header
 	border-color var(--c-border) !important
 
 .recharge-store-box ul.select-list .item.active
 .award-list-cntr .award-list-cntr .award-list .award-item img
 .chaos-pk-result-ctnr .result-panel .result-tab div.active
 .month-selector .month-info
+.gift-panel-box .gift-reveal-header .gift-tab.active .name
+.gift-panel-box .gift-reveal-header .gift-tab:hover .name
 	border-color var(--c-accent) !important
 
 .month-selector .month-info .month-list
