--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -206,6 +206,7 @@ textarea
 .twp-mask .twp-wrapper
 .pwp-modal-mask .pwp-modal-wrapper
 .month-selector .month-info .month-list
+.danmaku-menu
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
