--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -249,6 +249,7 @@ button
 .tag-channel-pane .channel-btns__link
 .bui-swiper-wrap .bui-swiper-next
 .bui-swiper-wrap .bui-swiper-pre
+.tag-channel-pane .channel-btns .is-subs
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
