--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -6748,6 +6748,14 @@
   .blpui-slider-container.horizontal-slider .slider-value {
     background-color: var(--c-white) !important;
   }
+  .blpui-slider-container .horizontal-slider .slider-white,
+  .blpui-slider-container .slider-marks .slider-marks-item::before {
+    background-color: var(--c-border) !important;
+  }
+  .blpui-slider-container .horizontal-slider .slider-process,
+  .blpui-slider-container .horizontal-slider .slider-handle {
+    background-color: var(--c-accent) !important;
+  }
   .bili-share-pc .weixin-hover .qr-before,
   .live-record-card-cntr,
   .week-rank-iframe,
@@ -6797,7 +6805,8 @@
   .bilibili-live-player-video-controller-hide-danmaku-container .hide-danmaku-title,
   .draw-full-cntr .count,
   .card-detail .card-item-middle-bottom .input-contain .text,
-  .card-detail .card-item-middle-bottom .input-trans-contain .text {
+  .card-detail .card-item-middle-bottom .input-trans-contain .text,
+  .blpui-slider-container .slider-value {
     color: var(--c-white) !important;
   }
   .gift-info .btn-rule,
@@ -6823,7 +6832,8 @@
   .btn-box .total-price .price,
   .gift-panel-box .gift-reveal-header .gift-tab.active .name,
   .end-part .award-title,
-  .end-part .winner-box .winner-list .winner-item span {
+  .end-part .winner-box .winner-list .winner-item span,
+  .blpui-slider-container .slider-marks .slider-marks-item--active {
     color: var(--c-accent) !important;
   }
   .room-introduction-tags,
@@ -6872,7 +6882,8 @@
   }
   .link-navbar-ctnr,
   .bili-share-pc .weixin-hover .qr-before,
-  .blpui-slider-container.horizontal-slider .slider-handle {
+  .blpui-slider-container.horizontal-slider .slider-handle,
+  .blpui-slider-container .horizontal-slider .slider-handle {
     box-shadow: none;
   }
   .link-navbar .main-ctnr .nav-logo {
