--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -73,6 +73,7 @@ em:not(.icon)
 .block-list-item-label
 .multi-page .cur-list .list-box li .pay-label
 .manga-detail .section .section-list .batch-buy
+.members-info .avatar .info-tag
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
