--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -63,6 +63,7 @@
 .bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row .row-selection .selection-span.active[data-type='fontsize']
 .s_tag .btn-add:hover span
 .bui-swiper-wrap .bui-swiper-item.bui-swiper-item-active .bui-swiper-text
+.members-info .avatar .attention
 	background-color var(--c-accent) !important
 
 .video-info .video-title .tit
@@ -130,6 +131,7 @@ ul.star-wrapper li i
 .bilibili-player .bilibili-player-area .bilibili-player-video-control .bilibili-player-video-btn .bilibili-player-video-quality-menu .bilibili-player-bigvip
 .bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row .row-selection .selection-span.active[data-type='fontsize'] .selection-name
 .bui-swiper-wrap .bui-swiper-item.bui-swiper-item-active .bui-swiper-text
+.members-info .avatar .attention i
 	color var(--c-white) !important
 
 .coin-operated-m .coin-title span
@@ -194,7 +196,11 @@ ul.star-wrapper li i.icon-star-full
 	box-shadow none
 
 #comment_module
+.r-con .members-info
 	margin-top 20px
+
+.members-info__header
+	margin-top 0 !important
 
 .v-wrap
 .wide-members
@@ -326,9 +332,6 @@ ul.star-wrapper li i.icon-star-full
 	margin-bottom 20px
 	border 1px solid var(--c-border)
 	background-color var(--c-background)
-
-.members-info .up-card
-	padding 0 10px
 
 .main-container .media-info .media-right .media-tool-bar .btn-rating
 	border 0
