--- a/weibo-dark/index.user.css
+++ b/weibo-dark/index.user.css
@@ -2,7 +2,7 @@
 @name           weibo-dark
 @namespace      tolking-usercss
 @version        0.0.1
-@description    一个简化的新浪微博页面样式，自适应黑暗模式
+@description    为新版浪微博页页面样式增加自适应黑暗模式，支持设置为深色模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/weibo-dark
 @supportURL			https://github.com/tolking/usercss/issues
@@ -10,218 +10,121 @@
 @license				MIT
 @preprocessor		stylus
 
+@var select theme "选择默认主题" ["auto:跟随系统", "dark:深色"]
 ==/UserStyle== */
 @-moz-document domain("weibo.com") {
-  /*需去掉下面注释*/
+  /*需去掉下面三处注释*/
   /*if theme == auto {
     @media(prefers-color-scheme:dark) {*/
   :root {
-    --weibo-top-nav-logo-color: #231916;
-    --weibo-top-nav-configs-bg: #e5e6eb;
-    --weibo-top-nav-configs-bg-hover: #d3d3d5;
-    --weibo-top-nav-configs-color: #050505;
-    --weibo-top-nav-search-bg: #f0f1f4;
-    --card-border-color: #f2f2f2;
-    --card-divider-color: #f9f9f9;
-    --card-border-radius: 4px;
-    --card-hover-color: var(--w-repost-background);
-    --feed-title-color: var(--w-sub);
-    --feed-retweet-bg: var(--w-retweet-background);
-    --feed-retweet-bg-hover: #e6e8ee;
-    --feed-card-hover: #eeeff2;
-    --feed-card--retw-hover: #f6f7fb;
-    --feed-detail-og-color: var(--w-main);
-    --vote-skin-bg-o: #f9f9f9;
-    --vote-skin-bd-item: rgba(147,147,147,0.6);
-    --vote-skin-bd-curr: #eb7530;
-    --vote-skin-bg-item: rgba(205,205,205,0.3);
-    --vote-skin-bg-curr: #f5e4dc;
-    --vote-skin-icon-curr: #ffa068;
-    --feed-video-detail-shadow: 0 0 4px rgba(0,0,0,0.1);
-    --feed-video-story-text-color: #fff;
-    --feed-picture-tag-bg: #eb7350;
-    --feed-picture-mask-bg: rgba(0,0,0,0.5);
-    --feed-picture-mask-color: #fff;
-    --feed-picture-mask-border-color: #f2f2f5;
-    --w-dividing-line2: #f9f9f9;
-    --w-dividing-line3: #f2f2f2;
-    --frame-background: #f1f1f1;
-    --card-bottom-divider-color: #e2e2e2;
-    --feed-skeleton-bg: var(--w-dividing-line);
-    --feed-skeleton-shine-color: rgba(0,0,0,0.1);
-    --feed-skeleton-shine-bg: linear-gradient(90deg, var(--feed-skeleton-bg), var(--feed-skeleton-shine-color) 50%, var(--feed-skeleton-bg));
-    --w-color-light: #fff;
-    --w-color-gray-1: #333;
-    --w-color-gray-2: #939393;
-    --w-color-gray-3: #838383;
-    --w-color-gray-4: #f2f2f5;
-    --w-color-gray-5: #fbfbfb;
-    --w-color-gray-6: #f0f1f4;
-    --w-color-gray-7: #ccc;
-    --w-color-gray-8: #e9e9e9;
-    --w-color-gray-9: #f8f8fb;
-    --w-color-gray-10: #dfe1e8;
-    --w-color-orange-1: #ff8200;
-    --w-color-orange-2: #ff5900;
-    --w-color-orange-3: #eb7350;
-    --w-color-red: #e14123;
-    --w-color-red-2: #f00;
-    --w-brand: var(--w-color-orange-1);
+    --weibo-top-nav-logo-color: #e2e2e2;
+    --weibo-top-nav-configs-bg: rgba(20,20,20,0.3);
+    --weibo-top-nav-configs-bg-hover: rgba(20,20,20,0.5);
+    --weibo-top-nav-configs-color: var(--w-main);
+    --weibo-top-nav-search-bg: rgba(20,20,20,0.3);
+    --card-border-color: var(--w-color-gray-6);
+    --card-divider-color: rgba(20,20,20,0.3);
+    --vote-skin-bg-o: #262626;
+    --w-dividing-line2: var(--w-color-gray-6);
+    --frame-background: #25272a;
+    --card-bottom-divider-color: var(--w-color-gray-6);
+    --w-color-light: #2a2a2a;
+    --w-color-gray-1: #e2e2e2;
+    --w-color-gray-2: #bababa;
+    --w-color-gray-3: #adadad;
+    --w-color-gray-6: #4e4e4e;
+    --w-color-gray-8: #444;
+    --w-color-gray-9: #404040;
     --w-main: var(--w-color-gray-1);
     --w-sub: var(--w-color-gray-2);
-    --w-hover: rgba(255,130,0,0.1);
-    --w-contrast: var(--w-color-light);
-    --w-error: var(--w-color-red-2);
-    --w-retweet-background: var(--w-color-gray-6);
     --w-repost-background: var(--w-color-gray-9);
     --w-card-background: var(--w-color-light);
     --w-input-background: var(--w-color-gray-6);
-    --w-drop-background: var(--w-color-gray-6);
     --w-dividing-line: var(--w-color-gray-6);
     --w-layer-border: var(--w-color-gray-8);
-    --w-image-border: rgba(0,0,0,0.05);
-    --w-tip-border: rgba(0,0,0,0.1);
-    --w-tip-error-bg: rgba(255,237,219,0.95);
-    --w-tip-warn-bg: #daeeff;
-    --w-tip-warn: #507daf;
-    --w-dialog-close-color: var(--w-color-gray-3);
-    --w-toast-text: var(--w-color-light);
-    --w-toast-background: rgba(0,0,0,0.8);
-    --w-switch-off-background: var(--w-color-light);
-    --w-switch-off-border-color: var(--w-color-gray-8);
-    --w-switch-on-background: var(--w-brand);
     --w-pop-item-hover: var(--w-color-gray-9);
-    --w-layer-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,0.1);
-    --w-mask-background: #000;
-    --w-checkbox-border: var(--w-color-gray-7);
-    --w-checkbox-check-color: var(--w-color-orange-1);
-    --w-radio-border: var(--w-color-gray-7);
-    --w-radio-check-color: var(--w-color-orange-1);
     --w-panel-background: var(--w-card-background);
-    --w-liked-color: var(--w-color-red);
-    --w-badge-text: var(--w-color-light);
-    --w-badge-background: #ff2026;
-    --w-badge-border-color: var(--w-color-light);
-    --w-avatar-line: rgba(0,0,0,0.05);
-    --w-avatar-hover: rgba(0,0,0,0.15);
-    --w-picture-hover: rgba(0,0,0,0.15);
-    --w-b-flat-primary: var(--w-color-light);
-    --w-b-flat-primary-bg: var(--w-color-orange-1);
-    --w-b-flat-primary-bg-hover: var(--w-color-orange-2);
-    --w-b-flat-default: var(--w-color-gray-1);
-    --w-b-flat-default-bg: #a29b9b;
-    --w-b-flat-default-bg-hover: #e0e0e0;
-    --w-b-line-primary: var(--w-color-orange-1);
-    --w-b-line-primary-bg-hover: rgba(255,130,0,0.1);
-    --w-b-line-primary-border: var(--w-color-orange-2);
-    --w-b-line-default: var(--w-color-gray-1);
-    --w-b-line-default-bg-hover: rgba(51,51,51,0.1);
-    --w-b-line-default-border: var(--w-color-gray-2);
+    --w-badge-text: #e2e2e2;
+    --w-badge-border-color: transparent;
+    --star-card-divider-color: var(--card-divider-color);
+  }
+  body,
+  html {
+    background-color: var(--frame-background);
+  }
+  .morepop_action_bk3Fq,
+  .woo-button-main.white {
+    color: var(--w-main);
+  }
+  .Feed_retweet_JqZJb {
+    background-color: var(--vote-skin-bg-o);
+  }
+  .Index_right_box_1-rX8 {
+    background-color: var(--w-color-light);
+  }
+  .Index_title_3W-Ol {
+    color: var(--c-main);
+  }
+  .Bar_main_R1N5v,
+  .LeftNav_inner_tEFee,
+  .Card_wrap_2ibWe {
+    border-color: var(--w-color-gray-6) !important;
   }
   /*}
 	} else {*/
   :root {
-    --weibo-top-nav-logo-color: #231916;
-    --weibo-top-nav-configs-bg: #e5e6eb;
-    --weibo-top-nav-configs-bg-hover: #d3d3d5;
-    --weibo-top-nav-configs-color: #050505;
-    --weibo-top-nav-search-bg: #f0f1f4;
-    --card-border-color: #f2f2f2;
-    --card-divider-color: #f9f9f9;
-    --card-border-radius: 4px;
-    --card-hover-color: var(--w-repost-background);
-    --feed-title-color: var(--w-sub);
-    --feed-retweet-bg: var(--w-retweet-background);
-    --feed-retweet-bg-hover: #e6e8ee;
-    --feed-card-hover: #eeeff2;
-    --feed-card--retw-hover: #f6f7fb;
-    --feed-detail-og-color: var(--w-main);
-    --vote-skin-bg-o: #f9f9f9;
-    --vote-skin-bd-item: rgba(147,147,147,0.6);
-    --vote-skin-bd-curr: #eb7530;
-    --vote-skin-bg-item: rgba(205,205,205,0.3);
-    --vote-skin-bg-curr: #f5e4dc;
-    --vote-skin-icon-curr: #ffa068;
-    --feed-video-detail-shadow: 0 0 4px rgba(0,0,0,0.1);
-    --feed-video-story-text-color: #fff;
-    --feed-picture-tag-bg: #eb7350;
-    --feed-picture-mask-bg: rgba(0,0,0,0.5);
-    --feed-picture-mask-color: #fff;
-    --feed-picture-mask-border-color: #f2f2f5;
-    --w-dividing-line2: #f9f9f9;
-    --w-dividing-line3: #f2f2f2;
-    --frame-background: #f1f1f1;
-    --card-bottom-divider-color: #e2e2e2;
-    --feed-skeleton-bg: var(--w-dividing-line);
-    --feed-skeleton-shine-color: rgba(0,0,0,0.1);
-    --feed-skeleton-shine-bg: linear-gradient(90deg, var(--feed-skeleton-bg), var(--feed-skeleton-shine-color) 50%, var(--feed-skeleton-bg));
-    --w-color-light: #fff;
-    --w-color-gray-1: #333;
-    --w-color-gray-2: #939393;
-    --w-color-gray-3: #838383;
-    --w-color-gray-4: #f2f2f5;
-    --w-color-gray-5: #fbfbfb;
-    --w-color-gray-6: #f0f1f4;
-    --w-color-gray-7: #ccc;
-    --w-color-gray-8: #e9e9e9;
-    --w-color-gray-9: #f8f8fb;
-    --w-color-gray-10: #dfe1e8;
-    --w-color-orange-1: #ff8200;
-    --w-color-orange-2: #ff5900;
-    --w-color-orange-3: #eb7350;
-    --w-color-red: #e14123;
-    --w-color-red-2: #f00;
-    --w-brand: var(--w-color-orange-1);
+    --weibo-top-nav-logo-color: #e2e2e2;
+    --weibo-top-nav-configs-bg: rgba(20,20,20,0.3);
+    --weibo-top-nav-configs-bg-hover: rgba(20,20,20,0.5);
+    --weibo-top-nav-configs-color: var(--w-main);
+    --weibo-top-nav-search-bg: rgba(20,20,20,0.3);
+    --card-border-color: var(--w-color-gray-6);
+    --card-divider-color: rgba(20,20,20,0.3);
+    --vote-skin-bg-o: #262626;
+    --w-dividing-line2: var(--w-color-gray-6);
+    --frame-background: #25272a;
+    --card-bottom-divider-color: var(--w-color-gray-6);
+    --w-color-light: #2a2a2a;
+    --w-color-gray-1: #e2e2e2;
+    --w-color-gray-2: #bababa;
+    --w-color-gray-3: #adadad;
+    --w-color-gray-6: #4e4e4e;
+    --w-color-gray-8: #444;
+    --w-color-gray-9: #404040;
     --w-main: var(--w-color-gray-1);
     --w-sub: var(--w-color-gray-2);
-    --w-hover: rgba(255,130,0,0.1);
-    --w-contrast: var(--w-color-light);
-    --w-error: var(--w-color-red-2);
-    --w-retweet-background: var(--w-color-gray-6);
     --w-repost-background: var(--w-color-gray-9);
     --w-card-background: var(--w-color-light);
     --w-input-background: var(--w-color-gray-6);
-    --w-drop-background: var(--w-color-gray-6);
     --w-dividing-line: var(--w-color-gray-6);
     --w-layer-border: var(--w-color-gray-8);
-    --w-image-border: rgba(0,0,0,0.05);
-    --w-tip-border: rgba(0,0,0,0.1);
-    --w-tip-error-bg: rgba(255,237,219,0.95);
-    --w-tip-warn-bg: #daeeff;
-    --w-tip-warn: #507daf;
-    --w-dialog-close-color: var(--w-color-gray-3);
-    --w-toast-text: var(--w-color-light);
-    --w-toast-background: rgba(0,0,0,0.8);
-    --w-switch-off-background: var(--w-color-light);
-    --w-switch-off-border-color: var(--w-color-gray-8);
-    --w-switch-on-background: var(--w-brand);
     --w-pop-item-hover: var(--w-color-gray-9);
-    --w-layer-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,0.1);
-    --w-mask-background: #000;
-    --w-checkbox-border: var(--w-color-gray-7);
-    --w-checkbox-check-color: var(--w-color-orange-1);
-    --w-radio-border: var(--w-color-gray-7);
-    --w-radio-check-color: var(--w-color-orange-1);
     --w-panel-background: var(--w-card-background);
-    --w-liked-color: var(--w-color-red);
-    --w-badge-text: var(--w-color-light);
-    --w-badge-background: #ff2026;
-    --w-badge-border-color: var(--w-color-light);
-    --w-avatar-line: rgba(0,0,0,0.05);
-    --w-avatar-hover: rgba(0,0,0,0.15);
-    --w-picture-hover: rgba(0,0,0,0.15);
-    --w-b-flat-primary: var(--w-color-light);
-    --w-b-flat-primary-bg: var(--w-color-orange-1);
-    --w-b-flat-primary-bg-hover: var(--w-color-orange-2);
-    --w-b-flat-default: var(--w-color-gray-1);
-    --w-b-flat-default-bg: #a29b9b;
-    --w-b-flat-default-bg-hover: #e0e0e0;
-    --w-b-line-primary: var(--w-color-orange-1);
-    --w-b-line-primary-bg-hover: rgba(255,130,0,0.1);
-    --w-b-line-primary-border: var(--w-color-orange-2);
-    --w-b-line-default: var(--w-color-gray-1);
-    --w-b-line-default-bg-hover: rgba(51,51,51,0.1);
-    --w-b-line-default-border: var(--w-color-gray-2);
+    --w-badge-text: #e2e2e2;
+    --w-badge-border-color: transparent;
+    --star-card-divider-color: var(--card-divider-color);
+  }
+  body,
+  html {
+    background-color: var(--frame-background);
+  }
+  .morepop_action_bk3Fq,
+  .woo-button-main.white {
+    color: var(--w-main);
+  }
+  .Feed_retweet_JqZJb {
+    background-color: var(--vote-skin-bg-o);
+  }
+  .Index_right_box_1-rX8 {
+    background-color: var(--w-color-light);
+  }
+  .Index_title_3W-Ol {
+    color: var(--c-main);
+  }
+  .Bar_main_R1N5v,
+  .LeftNav_inner_tEFee,
+  .Card_wrap_2ibWe {
+    border-color: var(--w-color-gray-6) !important;
   }
   /*}*/
 }
