--- a/weibo-dark/src/index.styl
+++ b/weibo-dark/src/index.styl
@@ -2,7 +2,7 @@
 @name           weibo-dark
 @namespace      tolking-usercss
 @version        0.0.1
-@description    一个简化的新浪微博页面样式，自适应黑暗模式
+@description    为新版浪微博页页面样式增加自适应黑暗模式，支持设置为深色模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/weibo-dark
 @supportURL			https://github.com/tolking/usercss/issues
@@ -10,14 +10,17 @@
 @license				MIT
 @preprocessor		stylus
 
+@var select theme "选择默认主题" ["auto:跟随系统", "dark:深色"]
 ==/UserStyle== */
 @-moz-document domain("weibo.com") {
-  /*!需去掉下面注释*/
+  /*!需去掉下面三处注释*/
   /*!if theme == auto {
     @media(prefers-color-scheme:dark) {*/
 			@import 'palette'
+      @import 'public'
 		/*!}
 	} else {*/
     @import 'palette'
+    @import 'public'
   /*!}*/
 }
