--- a/weibo-dark/src/palette.styl
+++ b/weibo-dark/src/palette.styl
@@ -6,7 +6,7 @@
   --weibo-top-nav-configs-color var(--w-main)
   --weibo-top-nav-search-bg rgba(20,20,20,.3)
   --card-border-color var(--w-color-gray-6)
-  --card-divider-color rgba(20,20,20,.3)
+  --card-divider-color var(--w-color-gray-9)
   // --card-hover-color: var(--w-repost-background);
   // --feed-title-color: var(--w-sub);
   // --feed-retweet-bg: var(--w-retweet-background);
@@ -39,10 +39,10 @@
   --w-color-gray-3 #adadad
   // --w-color-gray-4: #f2f2f5;
   // --w-color-gray-5: #fbfbfb;
-  --w-color-gray-6 #4e4e4e
+  --w-color-gray-6 #3b3b3b
   // --w-color-gray-7: #ccc;
   --w-color-gray-8 #444444
-  --w-color-gray-9 #404040
+  --w-color-gray-9 #313131
   // --w-color-gray-10: #dfe1e8;
   // --w-color-orange-1: #ff8200;
   // --w-color-orange-2: #ff5900;
@@ -53,12 +53,12 @@
   --w-main var(--w-color-gray-1)
   --w-sub var(--w-color-gray-2)
   // --w-hover: rgba(255,130,0,0.1);
-  // --w-contrast: var(--w-color-light);
+  --w-contrast #fff
   // --w-error: var(--w-color-red-2);
   // --w-retweet-background: var(--w-color-gray-6);
   --w-repost-background var(--w-color-gray-9)
   --w-card-background var(--w-color-light)
-  --w-input-background var(--w-color-gray-6)
+  --w-input-background #2f2f2f
   // --w-drop-background: var(--w-color-gray-6);
   --w-dividing-line var(--w-color-gray-6)
   --w-layer-border var(--w-color-gray-8)
@@ -88,7 +88,7 @@
   // --w-avatar-line: rgba(0,0,0,0.05);
   // --w-avatar-hover: rgba(0,0,0,0.15);
   // --w-picture-hover: rgba(0,0,0,0.15);
-  // --w-b-flat-primary: var(--w-color-light);
+  --w-b-flat-primary #fff
   // --w-b-flat-primary-bg: var(--w-color-orange-1);
   // --w-b-flat-primary-bg-hover: var(--w-color-orange-2);
   // --w-b-flat-default: var(--w-color-gray-1);
