--- a/weibo-dark/src/public.styl
+++ b/weibo-dark/src/public.styl
@@ -18,4 +18,5 @@ html
 .Bar_main_R1N5v
 .LeftNav_inner_tEFee
 .Card_wrap_2ibWe
+.title_titleBox_3bh5X
   border-color var(--w-color-gray-6) !important
