--- a/weibo-dark/index.user.css
+++ b/weibo-dark/index.user.css
@@ -14,8 +14,8 @@
 ==/UserStyle== */
 @-moz-document domain("weibo.com") {
   /*需去掉下面三处注释*/
-  /*if theme == auto {
-    @media(prefers-color-scheme:dark) {*/
+  if theme == auto {
+    @media(prefers-color-scheme:dark) {
   :root {
     --weibo-top-nav-logo-color: #e2e2e2;
     --weibo-top-nav-configs-bg: rgba(20,20,20,0.3);
@@ -23,7 +23,7 @@
     --weibo-top-nav-configs-color: var(--w-main);
     --weibo-top-nav-search-bg: rgba(20,20,20,0.3);
     --card-border-color: var(--w-color-gray-6);
-    --card-divider-color: rgba(20,20,20,0.3);
+    --card-divider-color: var(--w-color-gray-9);
     --vote-skin-bg-o: #262626;
     --w-dividing-line2: var(--w-color-gray-6);
     --frame-background: #25272a;
@@ -32,20 +32,22 @@
     --w-color-gray-1: #e2e2e2;
     --w-color-gray-2: #bababa;
     --w-color-gray-3: #adadad;
-    --w-color-gray-6: #4e4e4e;
+    --w-color-gray-6: #3b3b3b;
     --w-color-gray-8: #444;
-    --w-color-gray-9: #404040;
+    --w-color-gray-9: #313131;
     --w-main: var(--w-color-gray-1);
     --w-sub: var(--w-color-gray-2);
+    --w-contrast: #fff;
     --w-repost-background: var(--w-color-gray-9);
     --w-card-background: var(--w-color-light);
-    --w-input-background: var(--w-color-gray-6);
+    --w-input-background: #2f2f2f;
     --w-dividing-line: var(--w-color-gray-6);
     --w-layer-border: var(--w-color-gray-8);
     --w-pop-item-hover: var(--w-color-gray-9);
     --w-panel-background: var(--w-card-background);
     --w-badge-text: #e2e2e2;
     --w-badge-border-color: transparent;
+    --w-b-flat-primary: #fff;
     --star-card-divider-color: var(--card-divider-color);
   }
   body,
@@ -67,11 +69,12 @@
   }
   .Bar_main_R1N5v,
   .LeftNav_inner_tEFee,
-  .Card_wrap_2ibWe {
+  .Card_wrap_2ibWe,
+  .title_titleBox_3bh5X {
     border-color: var(--w-color-gray-6) !important;
   }
-  /*}
-	} else {*/
+  }
+	} else {
   :root {
     --weibo-top-nav-logo-color: #e2e2e2;
     --weibo-top-nav-configs-bg: rgba(20,20,20,0.3);
@@ -79,7 +82,7 @@
     --weibo-top-nav-configs-color: var(--w-main);
     --weibo-top-nav-search-bg: rgba(20,20,20,0.3);
     --card-border-color: var(--w-color-gray-6);
-    --card-divider-color: rgba(20,20,20,0.3);
+    --card-divider-color: var(--w-color-gray-9);
     --vote-skin-bg-o: #262626;
     --w-dividing-line2: var(--w-color-gray-6);
     --frame-background: #25272a;
@@ -88,20 +91,22 @@
     --w-color-gray-1: #e2e2e2;
     --w-color-gray-2: #bababa;
     --w-color-gray-3: #adadad;
-    --w-color-gray-6: #4e4e4e;
+    --w-color-gray-6: #3b3b3b;
     --w-color-gray-8: #444;
-    --w-color-gray-9: #404040;
+    --w-color-gray-9: #313131;
     --w-main: var(--w-color-gray-1);
     --w-sub: var(--w-color-gray-2);
+    --w-contrast: #fff;
     --w-repost-background: var(--w-color-gray-9);
     --w-card-background: var(--w-color-light);
-    --w-input-background: var(--w-color-gray-6);
+    --w-input-background: #2f2f2f;
     --w-dividing-line: var(--w-color-gray-6);
     --w-layer-border: var(--w-color-gray-8);
     --w-pop-item-hover: var(--w-color-gray-9);
     --w-panel-background: var(--w-card-background);
     --w-badge-text: #e2e2e2;
     --w-badge-border-color: transparent;
+    --w-b-flat-primary: #fff;
     --star-card-divider-color: var(--card-divider-color);
   }
   body,
@@ -123,8 +128,9 @@
   }
   .Bar_main_R1N5v,
   .LeftNav_inner_tEFee,
-  .Card_wrap_2ibWe {
+  .Card_wrap_2ibWe,
+  .title_titleBox_3bh5X {
     border-color: var(--w-color-gray-6) !important;
   }
-  /*}*/
+  }
 }
