--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -164,6 +164,8 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-video-danmaku-setting-left-block-content .bilibili-player-block-filter-type:hover .bilibili-player-block-filter-label
 .bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row.mode .selection-span.active .selection-name
 .step-index .money-n .mark
+.up-info .btn-follow-up i
+.main-container .ep-list-wrapper .list-title .mode-change i:hover
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
