--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.2.15
+@version        1.2.16
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-lite
@@ -2227,7 +2227,11 @@
   .block-list-item-label,
   .multi-page .cur-list .list-box li .pay-label,
   .manga-detail .section .section-list .batch-buy,
-  .members-info .avatar .info-tag {
+  .members-info .avatar .info-tag,
+  .main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item .badge,
+  .ep-list-wrapper .ep-item .badge.blue,
+  .section-ep-wrapper .ep-item .badge.blue,
+  .members-info .avatar .tag-sponsor {
     border: 0 !important;
     background-color: var(--c-accent) !important;
     color: var(--c-white) !important;
@@ -2306,7 +2310,11 @@
   .block-list-item-label:hover,
   .multi-page .cur-list .list-box li .pay-label:hover,
   .manga-detail .section .section-list .batch-buy:hover,
-  .members-info .avatar .info-tag:hover {
+  .members-info .avatar .info-tag:hover,
+  .main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item .badge:hover,
+  .ep-list-wrapper .ep-item .badge.blue:hover,
+  .section-ep-wrapper .ep-item .badge.blue:hover,
+  .members-info .avatar .tag-sponsor:hover {
     color: var(--c-white) !important;
   }
   .gg-icon,
@@ -4822,7 +4830,9 @@
   .bui-select.bui-select-quality-menu .bui-select-item.bui-select-item-active span,
   .bilibili-player-video-danmaku-setting-left-block-content .bilibili-player-block-filter-type:hover .bilibili-player-block-filter-label,
   .bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row.mode .selection-span.active .selection-name,
-  .step-index .money-n .mark {
+  .step-index .money-n .mark,
+  .up-info .btn-follow-up i,
+  .main-container .ep-list-wrapper .list-title .mode-change i:hover {
     color: var(--c-accent) !important;
   }
   .bilibili-player-feedback,
@@ -6451,6 +6461,9 @@
   }
   .link-navbar .left-part>.dp-table-cell .nav-items-ctnr a:nth-child(11) {
     transition-delay: 0.45s;
+  }
+  .link-navbar .left-part>.dp-table-cell .nav-items-ctnr a:nth-child(12) {
+    transition-delay: 0.5s;
   }
   .link-navbar .left-part>.dp-table-cell:hover {
     width: auto;
