--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -119,7 +119,7 @@
     opacity 1
     transform translateY(0)
 
-  for n in 3 4 5 6 7 8 9 10 11
+  for n in 3 4 5 6 7 8 9 10 11 12
     &:nth-child({n})
       transition-delay 0.05s * (n - 2)
 
