docs: change README

--- a/weibo-dark/index.user.css
+++ b/weibo-dark/index.user.css
@@ -2,7 +2,7 @@
 @name           weibo-dark
 @namespace      tolking-usercss
 @version        1.0.0
-@description    为新版浪微博页页面样式增加自适应黑暗模式，支持设置为深色模式
+@description    为新版新浪微博页面增加深色模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/weibo-dark
 @supportURL			https://github.com/tolking/usercss/issues
