fix: 优化创作中心样式

--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -40,6 +40,7 @@
 .section-item
 .cc-article-wrp .article-card .meta-view .option
 .select-box .select-item:hover
+.select-box .select-item.is-disabled
 .select-box .option-footer:hover
 .helper .icon
 .pie-empty-wrapper
@@ -79,6 +80,8 @@
 .rank-vedio-target
 .rank-vedio-view
 .notify-tips
+.drop-cascader-container .drop-cascader-pre-wrp .drop-cascader-pre-item:hover
+.drop-cascader-container .drop-cascader-list-wrp .drop-cascader-list-item:hover
   background-color var(--c-hover) !important
 
 #dc-section_preference .list_wrap .list-item
@@ -98,6 +101,10 @@
 .rank-vedio-view-item .item-list li+li .item-wrap:after
 .comment_wrap .operate_wrap .operate_right .operate-txt:not(:last-child):after
 .text-split_wrap .operate-txt:not(:last-child):after
+.cover-chop-modal-v2-body .cover-chop-modal-v2-body-split
+.cover-chop-modal-v2-body .cover-chop-modal-v2-small-mask-top
+.cover-chop-modal-v2-body .cover-chop-modal-v2-small-mask-bottom
+.upload-step-3-container-v2 .upload-3-v2-success-split
   background-color var(--c-border) !important
 
 .echarts
@@ -136,6 +143,9 @@ body
 .article-danmu-wrp .danmu-box
 .article-danmu-wrp .danmu-filter .left .delete .option-wrp .act-btn
 .content-wrap .tag
+.new-link-top-wrap .link-top-item .red_point
+.upload-step-3-container-v2
+.upload-step-3-container-v2 .upload-3-v2-follow
   background-color transparent !important
 
 .tabs .tabs__header .tabs__header-item.is-active:after
@@ -194,6 +204,7 @@ body
 #dc-section_retention .legend_wrap .legend-item .legend-label
 .upload-v2-step1-container .upload-agreement .reg-2
 .danmu-wrp .section .title-tip
+.cover-chop-modal-v2-body .cover-chop-modal-v2-body-right-text
   color var(--c-text) !important
 
 .link-top-container .link-top-item.active .red_point
@@ -234,6 +245,7 @@ i.icon-shape:after
 .comment_wrap .operate_wrap .operate_right .operate-txt.active
 .qa-area-ol-wrp .qa-icon
 .notify-tips .icon_wrap i
+.article-card.v2 .meta-view .more-btn:hover:not(.disabled) i
   color var(--c-accent) !important
 
 .bili-share-pc
@@ -309,12 +321,19 @@ i.icon-shape:after
 .source-rank-open-button
 .danmu-wrp .section
 .info-item
+.cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-items .selector-item
+.select-box-v2-container .select-box-v2-controller
+.drop-cascader-container .drop-cascader-list-wrp
+.label-item-v2-2-container
+.common-modal-container .common-modal-content .common-modal-head
+.article-card.v2 .meta-status .pubdate
   border-color var(--c-border) !important
 
 .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn
 .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_success_btn
 .section-item.actived
 .new-link-top-wrap .link-top-item.active
+.cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-items .selector-item-selected
   border-color var(--c-accent) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
