--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -119,6 +119,8 @@ button
 .twp-mask .twp-wrapper .twp-container .twp-btns .twp-btn.pack
 .twp-mask .twp-wrapper .twp-container .twp-btns .twp-btn.pay
 .pwp-modal-mask .pwp-modal-wrapper .pwp-btn.primary
+.common-modal-container .common-modal-content .common-modal-foot .footer-main>div div:first-child
+.upload-step-3-container-v2 .upload-3-v2-follow-btn.follow
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -250,6 +252,8 @@ button
 .bui-swiper-wrap .bui-swiper-next
 .bui-swiper-wrap .bui-swiper-pre
 .tag-channel-pane .channel-btns .is-subs
+.common-modal-container .common-modal-content .common-modal-foot .footer-main>div div:nth-child(2)
+.upload-step-3-container-v2 .upload-3-v2-success-go-url a
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
