--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -45,6 +45,7 @@
 .bcc-checkbox-checked .bcc-checkbox-checkbox
 .bili-radio:checked+span:after
 .bui-switch .bui-switch-input:checked+.bui-switch-label .bui-switch-body
+.check-radio-v2-container .check-radio-v2-box.check-radio-v2-box-checked:after
   background-color var(--c-accent) !important
 
 .date-picker-v2-container div
@@ -100,6 +101,7 @@ select
 .ui-calendar .flatpickr-day:hover
 .bcc-checkbox .bcc-checkbox-checkbox
 .bili-radio+span:before
+.check-radio-v2-container .check-radio-v2-box
   border-color var(--c-border) !important
 
 .ui-radio.active .ui-radio-icon
