--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -166,6 +166,7 @@ ul.star-wrapper li i.icon-star-full
 .step-index .money-n .mark
 .up-info .btn-follow-up i
 .main-container .ep-list-wrapper .list-title .mode-change i:hover
+.up-info .up-info_right .name .username.is-vip:hover
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
