--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -75,13 +75,18 @@ em:not(.icon)
 .manga-detail .section .section-list .batch-buy
 .members-info .avatar .info-tag
 .main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item .badge
-.ep-list-wrapper .ep-item .badge.blue, .section-ep-wrapper .ep-item .badge.blue
+.ep-list-wrapper .ep-item .badge.blue
+.section-ep-wrapper .ep-item .badge.blue
 .members-info .avatar .tag-sponsor
+.label-item-v2-container
+.label-item-v2-2-container.label-item-v2-2-container-selected
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
 
   &:hover
+  p
+  span
     color var(--c-white) !important
 
 .gg-icon
@@ -100,6 +105,9 @@ em:not(.icon)
 .history-card .up-info .room-status>span
 .achievement-card-centent>.header>.state-normal
 .tab-selector-wrap .tag-wrap .tag span
+.drop-cascader-container
+.children-sub-container
+.common-modal-container .common-modal-content
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
