--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -80,6 +80,7 @@ em:not(.icon)
 .members-info .avatar .tag-sponsor
 .label-item-v2-container
 .label-item-v2-2-container.label-item-v2-2-container-selected
+.article-card.v2 .meta-title .mission-mark
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
