--- a/weibo-dark/src/public.styl
+++ b/weibo-dark/src/public.styl
@@ -12,6 +12,9 @@ html
 .Index_right_box_1-rX8
   background-color var(--w-color-light)
 
+.ProfileHeader_tag_2Ku6K
+  background-color var(--card-hover-color)
+
 .Index_title_3W-Ol
   color var(--c-main)
 
