--- a/weibo-dark/index.user.css
+++ b/weibo-dark/index.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           weibo-dark
 @namespace      tolking-usercss
-@version        1.0.0
+@version        1.0.1
 @description    为新版新浪微博页面增加深色模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/weibo-dark
@@ -63,6 +63,9 @@
   .Index_right_box_1-rX8 {
     background-color: var(--w-color-light);
   }
+  .ProfileHeader_tag_2Ku6K {
+    background-color: var(--card-hover-color);
+  }
   .Index_title_3W-Ol {
     color: var(--c-main);
   }
@@ -121,6 +124,9 @@
   }
   .Index_right_box_1-rX8 {
     background-color: var(--w-color-light);
+  }
+  .ProfileHeader_tag_2Ku6K {
+    background-color: var(--card-hover-color);
   }
   .Index_title_3W-Ol {
     color: var(--c-main);
